# term-seq

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
TermColor/: Sgr.hpp
TermColor/private/: detection_posix.hpp
src/: CMakeLists.txt
src/TermColor/: ControlSequence.hpp  Sgr.hpp  SgrColor.hpp  StaticString.hpp  constants.hpp  detection.hpp
src/TermColor/private/: detection_posix.hpp
src/TermSeq/: CMakeLists.txt  ControlSequence.hpp  ScopedOutput.hpp  ScopedReset.hpp  Sgr.hpp  SgrColor.hpp  StaticString.hpp  detection.hpp
src/TermSeq/private/: detection_posix.hpp
tests/: CMakeLists.txt  SgrColorUnitTest.cpp  detection_unit_test.cpp  scoped_unit_test.cpp
tests/manual/: CMakeLists.txt  main.cpp
